--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,3 @@
-language: node_js
 sudo: required
 services:
   - docker
@@ -12,3 +11,14 @@ before_install:
   - gcloud config set project eco-shift-326816
   - gcloud config set compute/zone us-central1-a
   - gcloud container clusters get-credentials multi-cluster
+  - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USENAME" --password-stdin
+  - docker build -t cpinochet/react-test -f ./client/Dockerfile.dev ./client
+
+script:
+  - docker run cpinochet/react-test npm test -- --coverage
+
+deploy:
+  provider: script
+  script: bash ./deploy.sh
+  on:
+    branch: master
