--- a/k8s/client-deployment.yaml
+++ b/k8s/client-deployment.yaml
@@ -14,6 +14,6 @@ spec:
     spec:
       containers:
         - name: client
-          image: stephengrider/multi-client
+          image: cpinochet/multi-client:latest
           ports:
             - containerPort: 3000
