--- a/k8s/worker-deployment.yaml
+++ b/k8s/worker-deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: worker
-          image: stephengrider/multi-worker
+          image: cpinochet/multi-worker:latest
           env:
             - name: REDIS_HOST
               value: redis-cluster-ip-service
