--- a/.travis.yml
+++ b/.travis.yml
@@ -15,20 +15,23 @@ before_install:
   - docker build -t cpinochet/react-test -f ./client/Dockerfile.dev ./client
 
 script:
-  - docker run cpinochet/react-test npm test -- --coverage
+  - docker run -e CI=true cpinochet/react-test npm test
+
+after_success:
+  - echo "Travis_Job id is $TRAVIS_JOB_ID"
+  - echo "Travis_commit is $TRAVIS_COMMIT"
+  - STC=`echo ${TRAVIS_COMMIT::7}`
+  - export $STC
+  - echo $STC
+  - echo "Travis_pull_requet_sha is $TRAVIS_PULL_REQUEST_SHA"
+  - echo "Building Docker Images..."
+  - docker build -t cpinochet/multi-client:${STC} -f ./client/Dockerfile ./client
+  - docker build -t cpinochet/multi-server:${STC} -f ./server/Dockerfile ./server
+  - docker build -t cpinochet/multi-worker:${STC} -f ./worker/Dockerfile ./worker
 
 deploy:
   provider: script
   script:
-    - echo "Travis_Job id is $TRAVIS_JOB_ID"
-    - echo "Travis_commit is $TRAVIS_COMMIT"
-    - STC=`echo ${TRAVIS_COMMIT::7}`
-    - export $STC
-    - echo $STC
-    - echo "Travis_pull_requet_sha is $TRAVIS_PULL_REQUEST_SHA"
-    - echo "Building Docker Images..."
-    - docker build -t cpinochet/multi-client:${STC} -f ./client/Dockerfile ./client
-    - docker build -t cpinochet/multi-server:${STC} -f ./server/Dockerfile ./server
-    - docker build -t cpinochet/multi-worker:${STC} -f ./worker/Dockerfile ./worker
+    - echo "Hola mundo"
   on:
     branch: master
