--- a/.travis.yml
+++ b/.travis.yml
@@ -45,5 +45,23 @@ deploy:
   provider: script
   script:
     - echo "Hola mundo"
+    - # Updating multi-client deployment manifest
+    - echo "Updating multi-client deployment manifest"
+    - CURRENT_TAG=$(grep 'multi-client' k8s/client-deployment.yaml | awk -F ":" '{print $3}')
+    - echo $CURRENT_TAG
+    - sed -i -r 's/'":$CURRENT_TAG"'/'":$STC"'/g' k8s/client-deployment.yaml
+    - cat k8s/client-deployment.yaml | grep image
+    - # Updating multi-server deployment manifest
+    - echo "Updating multi-server deployment manifest"
+    - CURRENT_TAG=$(grep 'multi-server' k8s/server-deployment.yaml | awk -F ":" '{print $3}')
+    - echo $CURRENT_TAG
+    - sed -i -r 's/'":$CURRENT_TAG"'/'":$STC"'/g' k8s/server-deployment.yaml
+    - cat k8s/server-deployment.yaml | grep image
+    - # Updating multi-worker deployment manifest
+    - echo "Updating multi-worker deployment manifest"
+    - CURRENT_TAG=$(grep 'multi-worker' k8s/worker-deployment.yaml | awk -F ":" '{print $3}')
+    - echo $CURRENT_TAG
+    - sed -i -r 's/'":$CURRENT_TAG"'/'":$STC"'/g' k8s/worker-deployment.yaml
+    - cat k8s/worker-deployment.yaml | grep image
   on:
     branch: master
