--- a/.travis.yml
+++ b/.travis.yml
@@ -39,10 +39,28 @@ after_success:
   - docker tag cpinochet/multi-worker:${STC} cpinochet/multi-worker:latest
   - docker push cpinochet/multi-worker:${STC}
   - docker push cpinochet/multi-worker:latest
+  - # Updating multi-client deployment manifest
+  - echo "Updating multi-client deployment manifest"
+  - CURRENT_TAG=$(grep 'multi-client' k8s/client-deployment.yaml | awk -F ":" '{print $3}')
+  - echo $CURRENT_TAG
+  - sed -i -r 's/'":$CURRENT_TAG"'/'":$STC"'/g' k8s/client-deployment.yaml
+  - cat k8s/client-deployment.yaml | grep image
+  - # Updating multi-server deployment manifest
+  - echo "Updating multi-server deployment manifest"
+  - CURRENT_TAG=$(grep 'multi-server' k8s/server-deployment.yaml | awk -F ":" '{print $3}')
+  - echo $CURRENT_TAG
+  - sed -i -r 's/'":$CURRENT_TAG"'/'":$STC"'/g' k8s/server-deployment.yaml
+  - cat k8s/server-deployment.yaml | grep image
+  - # Updating multi-worker deployment manifest
+  - echo "Updating multi-worker deployment manifest"
+  - CURRENT_TAG=$(grep 'multi-worker' k8s/worker-deployment.yaml | awk -F ":" '{print $3}')
+  - echo $CURRENT_TAG
+  - sed -i -r 's/'":$CURRENT_TAG"'/'":$STC"'/g' k8s/worker-deployment.yaml
+  - cat k8s/worker-deployment.yaml | grep image
 
 deploy:
   provider: script
   script:
-    - bash ./deploy.sh
+    - echo "Hola mundo"
   on:
     branch: master
