--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,7 @@ before_install:
 #  - gcloud config set compute/zone us-central1-a
 #  - gcloud container clusters list 
 #  - gcloud container clusters get-credentials multi-cluster
-$  - kubectl get nodes
+#  - kubectl get nodes
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USENAME" --password-stdin
   - docker build -t cpinochet/react-test -f ./client/Dockerfile.dev ./client
 
