--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,7 @@ before_install:
   - /bin/bash install_google_cloud_sdk.sh --disable-prompts
   - source $HOME/google-cloud-sdk/path.bash.inc
   - gcloud components update kubectl --quiet
+  - echo $SERVICE_ACCOUNT | base64 -d
 #  - gcloud auth activate-service-account --key-file service-account.json
 #  - gcloud config set project eco-shift-326816
 #  - gcloud config set compute/zone us-central1-a
